--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     "type": "git",
     "url": "https://github.com/dbushell/Pikaday.git"
   },
-  "optionalDependencies": {
-    "moment": "2.x"
-  },
   "devDependencies": {
     "mocha": "~1.18.2",
     "expect.js": "^0.3.1"
@@ -37,7 +34,8 @@
     "browsers": [
       "ie/7..latest",
       "chrome/latest",
-      "firefox/3.6", "firefox/latest",
+      "firefox/3.6",
+      "firefox/latest",
       "safari/latest",
       "opera/latest"
     ]
